t Move most tests from Catch2 to DocTest to speed up developer and CI builds

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -3,15 +3,32 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
     DocTestApprovalTestTests.cpp
+    core/ApprovalExceptionTests.cpp
+    docs/CombinationsSampleCode.cpp
     docs/DisposableSamples.cpp
     docs/DocTestDocsSamples.cpp
     docs/ForgottenToConfigure.cpp
+    docs/OverviewExamples.cpp
+    docs/ToStringExample.cpp
+    docs/ToStringTemplateExample.cpp
+    docs/ToStringWrapperExample.cpp
+    docs/Tutorial.cpp
     namers/DocTestNamerTests.cpp
     namers/NamerTests.cpp
+    reporters/BlockingReporterTests.cpp
+    reporters/CIBuildOnlyReporterTests.cpp
     reporters/CommandLineReporterTests.cpp
     reporters/CustomReporterTests.cpp
+    reporters/DoNothingLauncher.h
+    reporters/FakeReporter.h
+    reporters/ReporterTests.cpp
+    reporters/ReporterTests.cpp
+    reporters/TestReporter.h
     utilities/ExceptionCollectorTests.cpp
     utilities/FileUtilsTests.cpp
+    utilities/StringUtilsTests.cpp
+    utilities/SystemUtilsTests.cpp
+    writers/StringWriterTests.cpp
     )
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
