--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
     DocTestApprovalTestTests.cpp
+    comparators/ComparatorDisposerTest.cpp
     core/ApprovalExceptionTests.cpp
     core/FileApproverTests.cpp
     docs/CombinationsSampleCode.cpp
