--- a/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
@@ -1,29 +1,17 @@
 set(CMAKE_CXX_STANDARD 11)
 
-# Create one executable for each of the Catch2 targets and aliases we require to exist
+# Create one library for each of the Catch2 targets and aliases we require to exist
 
 # This is the one users are recommended to use:
-add_executable(
+add_library(
         catch2_cmake_checks_Catch2Catch2 catch2_cmake_checks.cpp)
 target_link_libraries(
         catch2_cmake_checks_Catch2Catch2 Catch2::Catch2)
-add_test(
-        NAME
-        catch2_cmake_checks_Catch2Catch2
-        COMMAND
-        catch2_cmake_checks_Catch2Catch2
-)
 
-add_executable(
+add_library(
         catch2_cmake_checks_capital_Catch2 catch2_cmake_checks.cpp)
 target_link_libraries(
         catch2_cmake_checks_capital_Catch2 Catch2)
-add_test(
-        NAME
-        catch2_cmake_checks_capital_Catch2
-        COMMAND
-        catch2_cmake_checks_capital_Catch2
-)
 
 if(NOT_SUBPROJECT)
     # Don't build this if we are in a sub-project, in case the user has pulled in
@@ -31,16 +19,10 @@ if(NOT_SUBPROJECT)
     #
     # This one is historical, left over from when ApprovalTests.cpp was first created.
     # We could encourage users to move away from it.
-    add_executable(
+    add_library(
             catch2_cmake_checks_lower_case_catch2 catch2_cmake_checks.cpp)
     target_link_libraries(
             catch2_cmake_checks_lower_case_catch2 catch2)
-    add_test(
-            NAME
-            catch2_cmake_checks_lower_case_catch2
-            COMMAND
-            catch2_cmake_checks_lower_case_catch2
-    )
 endif()
 
 # Check that our real target name for Catch2 matches that used in the Catch2 project
