--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -2,7 +2,9 @@ project(DocTest_Tests)
 set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
+        CombinationTests.cpp
         DocTestApprovalTestTests.cpp
+        VectorTests.cpp
         comparators/ComparatorDisposerTest.cpp
         core/ApprovalExceptionTests.cpp
         core/FileApproverTests.cpp
