--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -2,6 +2,7 @@ project(DocTest_Tests)
 set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
         main.cpp
+        ApprovalsTests.cpp
         CombinationTests.cpp
         DocTestApprovalTestTests.cpp
         VectorTests.cpp
