t Add missing add_test() cmake call Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -16,5 +16,6 @@ if (Boost_FOUND)
 endif ()
 
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests)
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
 include(WarningsAsErrors)
