t Try installing Boost in one Travis config Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ language: cpp
     packages:
       - clang-8
       - libstdc++-8-dev
+      - libboost-all-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-8
