t Add libboost-all-dev too all Travis Linux configs Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ language: cpp
       - ubuntu-toolchain-r-test
     packages:
       - g++-5
+      - libboost-all-dev
 
 .addons-gcc6: &gcc6
   apt:
@@ -25,6 +26,7 @@ language: cpp
       - ubuntu-toolchain-r-test
     packages:
       - g++-6
+      - libboost-all-dev
 
 .addons-gcc7: &gcc7
   apt:
@@ -32,6 +34,7 @@ language: cpp
       - ubuntu-toolchain-r-test
     packages:
       - g++-7
+      - libboost-all-dev
 
 .addons-gcc8: &gcc8
   apt:
@@ -39,6 +42,7 @@ language: cpp
       - ubuntu-toolchain-r-test
     packages:
       - g++-8
+      - libboost-all-dev
 
 .addons-gcc9: &gcc9
   apt:
@@ -46,6 +50,7 @@ language: cpp
       - ubuntu-toolchain-r-test
     packages:
       - g++-9
+      - libboost-all-dev
 
 # -------------------------------------------------------------------------
 # Linux clang
@@ -56,6 +61,7 @@ language: cpp
     packages:
       - clang-5.0
       - libstdc++-8-dev
+      - libboost-all-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-5.0
@@ -65,6 +71,7 @@ language: cpp
     packages:
       - clang-6.0
       - libstdc++-8-dev
+      - libboost-all-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-6.0
@@ -74,6 +81,7 @@ language: cpp
     packages:
       - clang-7
       - libstdc++-8-dev
+      - libboost-all-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-7
