t Remove the need to comment and un-comment cmake line Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -4,8 +4,12 @@ add_executable(${PROJECT_NAME}
         main.cpp
         )
 
-# Specific to Clare's Mac
-#set(Boost_INCLUDE_DIR /Users/clare/Documents/develop/tools/boost/boost_1_71_0_install/include/ CACHE FILEPATH "" FORCE)
+# Specific to Clare's Mac - temporary for testing...
+if (DEFINED ENV{USER})
+    if ("$ENV{USER}" STREQUAL "clare")
+        set(Boost_INCLUDE_DIR /Users/clare/Documents/develop/tools/boost/boost_1_71_0_install/include/ CACHE FILEPATH "" FORCE)
+    endif ()
+endif ()
 
 find_package(Boost 1.1.0 COMPONENTS unit_test_framework REQUIRED)
 if (Boost_FOUND)
