--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ before_build:
          IF "%TARGET%" == "mingw" set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
          IF "%TARGET%" == "mingw" set PATH=%MINGWPATH%;%PATH%
          IF "%TARGET%" == "cygwin" set "PATH=C:\cygwin\bin;C:\cygwin\usr\bin;%PATH%"
-         IF "%TARGET%" == "cygwin" "C:/cygwin/setup-x86.exe" --quiet-mode --packages libboost-all-dev > cygwin-install.txt || bash -c "cat cygwin-install.txt"
+         IF "%TARGET%" == "cygwin" "C:/cygwin/setup-x86.exe" --quiet-mode --packages libboost_test1.60-1.60.0-2  > cygwin-install.txt || bash -c "cat cygwin-install.txt"
          cmake -G %GENERATOR% .
 
 build_script:
