--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -7,8 +7,7 @@ add_executable(${PROJECT_NAME}
 # Specific to Clare's Mac - temporary for testing...
 if (DEFINED ENV{USER})
     if ("$ENV{USER}" STREQUAL "clare")
-        #        set(Boost_INCLUDE_DIR /Users/clare/Documents/develop/tools/boost/boost_1_71_0_install/include/ CACHE FILEPATH "" FORCE)
-        set(Boost_INCLUDE_DIR /Users/clare/Documents/develop/tools/boost/boost_1_71_0/
+        set(BOOST_ROOT /Users/clare/Documents/develop/tools/boost/boost_1_71_0/
                 CACHE FILEPATH "" FORCE)
     endif ()
 endif ()
