--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -117,10 +117,15 @@ jobs:
         echo Build space: ${{ env.BUILD_DIR_PATH }}
 
 
-    - name: install dependencies for macOS
+    - name: install boost for macOS
       if: matrix.os == 'macOS-latest'
       run: |
         brew install boost
+    - name: install boost for linux
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update -qq
+        sudo apt-get install -y libboost-all-dev
 
     - name: make build space
       run: |
