--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ language: cpp
 #  except:
 #    - compile_time_ninja_check_74
 
+env:
+  global:
+    - BOOST_URL="https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.bz2"
+    - BOOST_DIR="boost_1_72_0"
+
 # -------------------------------------------------------------------------
 # Linux gcc
 # -------------------------------------------------------------------------
@@ -176,6 +181,7 @@ before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
   - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CXX="clang++" CC="clang"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis_retry wget --quiet -O - ${BOOST_URL} | tar -xj || exit 1 ; export BOOST_ROOT=`pwd`/${BOOST_DIR} ; echo $BOOST_ROOT ; fi
   - which $CXX
   - which $CC
   - $CXX --version
