--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -2,6 +2,7 @@ project(Boost_Tests)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
         main.cpp
+        BoostTestApprovalTestsTests.cpp
         )
 
 # unit_test_framework
