*** Disable building of examples (#120)
To get faster feedback whilst fixing the cygwin test crash on AppVeyor.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,9 @@ if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_TESTING)
     add_subdirectory(tests)
 endif ()
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_EXAMPLES)
-    add_subdirectory(examples)
-endif ()
+#if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_EXAMPLES)
+#    add_subdirectory(examples)
+#endif ()
 
 #message("CMAKE_VERSION = ${CMAKE_VERSION}")
 #message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
