--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(Boost_Tests)
 set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
-#        main.cpp
+        main.cpp
         BoostTestApprovalTestsTests.cpp
         )
 
