--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(Boost_Tests)
-#add_subdirectory(Catch2_Tests)
-#add_subdirectory(GoogleTest_Tests)
-#add_subdirectory(DocTest_Tests)
-#add_subdirectory(UT_Tests)
-#add_subdirectory(CMake_Tests)
+add_subdirectory(Catch2_Tests)
+add_subdirectory(GoogleTest_Tests)
+add_subdirectory(DocTest_Tests)
+add_subdirectory(UT_Tests)
+add_subdirectory(CMake_Tests)
