F Add hard-coded GUID scrubber
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>
Co-Authored-By: Abdul Rehman Gani <abdulg@users.noreply.github.com>
Co-Authored-By: Bernard Vander Beken <bernard@jawn.net>
Co-Authored-By: Harald Reingruber <haraldreingruber@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(${PROJECT_NAME}
         reporters/ReporterTests.cpp
         reporters/ReporterTests.cpp
         reporters/TestReporter.h
+        scrubbers/GuidScrubberTests.cpp
         utilities/CartesianProductTests.cpp
         utilities/ExceptionCollectorTests.cpp
         utilities/FileUtilsSystemSpecificTests.cpp
