t Try enabling Warnings-as-Errors in Boost_Tests

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -24,4 +24,4 @@ endif ()
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-#include(WarningsAsErrors)
+include(WarningsAsErrors)
