e Don't treat warnings as errors on Windows builds (#122)
(i.e. Visual Studio, cygwin and mingw)

--- a/tests/Boost_Tests/CMakeLists.txt
+++ b/tests/Boost_Tests/CMakeLists.txt
@@ -24,4 +24,10 @@ endif ()
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-include(WarningsAsErrors)
+message("CMAKE_SYSTEM_NAME = ${CMAKE_SYSTEM_NAME}")
+if (NOT "${CMAKE_SYSTEM_NAME}" MATCHES "Windows")
+    message("Treating warnings as errors in Boost_Tests")
+    include(WarningsAsErrors)
+else ()
+    message("NOT Treating warnings as errors in Boost_Tests")
+endif ()
