e Tidy up builds, now Boost_Tests building on all platforms (#122)
Warnings are now treated as errors on Linux and Mac
CI builds - and not on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ include(ApprovalTestsOptions)
 
 add_subdirectory(ApprovalTests)
 
-set(CMAKE_VERBOSE_MAKEFILE on)
+set(CMAKE_VERBOSE_MAKEFILE off)
 
 if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
     include(CodeCoverage)
