*** Fixing another deprecation - interim commit
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -48,4 +48,4 @@ if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
             DEPENDENCIES ${PROJECT_NAME})
 endif ()
 
-include(WarningsAsErrors)
+#include(WarningsAsErrors)
