e Make showing of deprecation warnings optional again
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -40,7 +40,7 @@ add_executable(${PROJECT_NAME}
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
-#target_compile_definitions(${PROJECT_NAME} PRIVATE APPROVALS_SHOW_DEPRECATION_WARNINGS)
+target_compile_definitions(${PROJECT_NAME} PRIVATE APPROVALS_SHOW_DEPRECATION_WARNINGS)
 
 if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
     setup_target_for_coverage_lcov(
