--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -126,6 +126,12 @@ jobs:
       run: |
         sudo apt-get update -qq
         sudo apt-get install -y libboost-all-dev
+    - name: set up boost for windows
+      if: matrix.os == 'windows-latest' || matrix.os == 'windows-2016'
+      run: |
+        echo "::set-env name=BOOST_ROOT::C:\hostedtoolcache\windows\Boost\1.72.0"
+        echo "::set-env name=BOOST_INCLUDEDIR::${{ env.BOOST_ROOT }}\boost\include"
+        echo "::set-env name=BOOST_LIBRARYDIR::${{ env.BOOST_ROOT }}\lib"
 
     - name: make build space
       run: |
