--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(${PROJECT_NAME}
         main.cpp
         ApprovalsTests.cpp
         CombinationTests.cpp
+        DeprecatedApprovalsTests.cpp
         DocTestApprovalTestTests.cpp
         VectorTests.cpp
         comparators/ComparatorDisposerTest.cpp
