--- a/examples/doctest_existing_main/CMakeLists.txt
+++ b/examples/doctest_existing_main/CMakeLists.txt
@@ -1,7 +1,9 @@
 project(doctest_existing_main)
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 add_executable(${PROJECT_NAME}
         main.cpp
+        DeprecatedApprovalsTests.cpp
+        DeprecatedCombinationApprovalsTests.cpp
         DoctestApprovalsTests.cpp
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
