t Allow easier experimentation with deprecation warnings

--- a/examples/doctest_existing_main/CMakeLists.txt
+++ b/examples/doctest_existing_main/CMakeLists.txt
@@ -9,3 +9,5 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
+#include(WarningsAsErrors)
