--- a/examples/doctest_existing_main/CMakeLists.txt
+++ b/examples/doctest_existing_main/CMakeLists.txt
@@ -3,6 +3,7 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
         main.cpp
         DeprecatedApprovalsTests.cpp
+        DeprecatedApprovalTestsVersion.cpp
         DeprecatedCombinationApprovalsTests.cpp
         DoctestApprovalsTests.cpp
         )
