--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/releases
 *.received.*
 .idea
 doc/html/
+/doc/sphinx/generated_docs/*.rst
+/doc/sphinx/pandoc-*.pkg
 .vs/
 /.vscode/
 *.runsettings
