t Add tests of using custom string converter

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(${PROJECT_NAME}
         ApprovalsTests.cpp
         CombinationTests.cpp
         DocTestApprovalTestTests.cpp
+        TemplateApprovalsTests.cpp
         VectorTests.cpp
         comparators/ComparatorDisposerTest.cpp
         core/ApprovalExceptionTests.cpp
