--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -11,8 +11,8 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE}
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         DEPENDS
         # Other docs files you want to track should go here (or in some variable)
-        ${CMAKE_CURRENT_SOURCE_DIR}/approving.rst
-        ${CMAKE_CURRENT_SOURCE_DIR}/core.rst
+        ${CMAKE_CURRENT_SOURCE_DIR}/api/approving.rst
+        ${CMAKE_CURRENT_SOURCE_DIR}/api/core.rst
         ${CMAKE_CURRENT_SOURCE_DIR}/index.rst
         ${CMAKE_CURRENT_SOURCE_DIR}/markdown_conversion.py
         ${DOXYGEN_INDEX_FILE}
