--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -11,10 +11,10 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE}
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         DEPENDS
         # Other docs files you want to track should go here (or in some variable)
-        ${CMAKE_CURRENT_SOURCE_DIR}/api/approving.rst
-        ${CMAKE_CURRENT_SOURCE_DIR}/api/core.rst
-        ${CMAKE_CURRENT_SOURCE_DIR}/index.rst
-        ${CMAKE_CURRENT_SOURCE_DIR}/markdown_conversion.py
+        api/approving.rst
+        api/core.rst
+        index.rst
+        markdown_conversion.py
         ${DOXYGEN_INDEX_FILE}
         MAIN_DEPENDENCY ${SPHINX_SOURCE}/conf.py
         COMMENT "Generating documentation with Sphinx - for output, open ${SPHINX_INDEX_FILE}")
