--- a/doc/sphinx/CMakeLists.txt
+++ b/doc/sphinx/CMakeLists.txt
@@ -17,10 +17,16 @@ add_custom_command(OUTPUT ${SPHINX_INDEX_FILE}
         markdown_conversion.py
         ${DOXYGEN_INDEX_FILE}
         MAIN_DEPENDENCY ${SPHINX_SOURCE}/conf.py
-        COMMENT "Generating documentation with Sphinx - for output, open ${SPHINX_INDEX_FILE}")
+        COMMENT "Generating documentation with Sphinx")
 
 # Nice named target so we can run the job easily
 add_custom_target(Sphinx ALL DEPENDS ${SPHINX_INDEX_FILE} Doxygen)
+
+# Show where to find the generated documentation
+add_custom_command(TARGET Sphinx POST_BUILD
+        COMMAND ;
+        COMMENT "For Sphinx output, open ${SPHINX_INDEX_FILE}"
+        )
 
 # Add an install target to install the docs
 include(GNUInstallDirs)
