e The Sphinx target now runs if *any* doc/...*.md has changed.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -13,6 +13,10 @@ endif ()
 set(APPROVAL_TESTS_PUBLIC_HEADER_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
 file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS ${APPROVAL_TESTS_PUBLIC_HEADER_DIR}/*.h)
 
+# Find all the .md files in doc/ directory
+set(APPROVAL_TESTS_DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
+file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_MD_FILES ${APPROVAL_TESTS_DOC_DIR}/*.md)
+
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
 set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)
