--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -14,8 +14,13 @@ set(APPROVAL_TESTS_PUBLIC_HEADER_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
 file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS ${APPROVAL_TESTS_PUBLIC_HEADER_DIR}/*.h)
 
 # Find all the .md files in doc/ directory
+# APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES will contain all mdsource/*.source.md files
 set(APPROVAL_TESTS_DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
-file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_MD_FILES ${APPROVAL_TESTS_DOC_DIR}/*.md)
+file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES ${APPROVAL_TESTS_DOC_DIR}/*.source.md)
+
+# APPROVAL_TESTS_GEN_DOC_MD_FILES        will contain corresponding *.md
+string(REPLACE "mdsource/" "" APPROVAL_TESTS_GEN_DOC_MD_FILES "${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}")
+string(REPLACE ".source.md" ".md" APPROVAL_TESTS_GEN_DOC_MD_FILES "${APPROVAL_TESTS_GEN_DOC_MD_FILES}")
 
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
 set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
