e Fix bug that after doing "Rebuild 'Sphinx'", the build fails after running mdsnippets.
This creates a separate CMake build target, RunMdsnippets

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -32,6 +32,8 @@ set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 
 add_subdirectory(doxygen)
 
+add_subdirectory(run_mdsnippets)
+
 set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/sphinx)
 set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/sphinx)
 set(SPHINX_INDEX_FILE ${SPHINX_BUILD}/index.html)
