e Remove documentation-related targets from ALL
This will speed up running CTest from inside CLion, when using the mechanism
described in https://youtrack.jetbrains.com/issue/CPP-905#focus=streamItem-27-4130417.0-0

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -15,4 +15,4 @@ add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         )
 
 # Nice named target so we can run the job easily
-add_custom_target(RunMdsnippets ALL DEPENDS ${FIRST_GENERATED_MD_FILE})
+add_custom_target(RunMdsnippets DEPENDS ${FIRST_GENERATED_MD_FILE})
