e Make RunMdsnippets rerun if mdsnippets.json changes

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -10,7 +10,9 @@ list(GET APPROVAL_TESTS_GEN_DOC_MD_FILES 0 FIRST_GENERATED_MD_FILE)
 add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         COMMAND mdsnippets
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        DEPENDS ${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}
+        DEPENDS
+        ${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}
+        ${PROJECT_SOURCE_DIR}/mdsnippets.json
         BYPRODUCTS ${APPROVAL_TESTS_GEN_DOC_MD_FILES}
         )
 
