e Add missing dependencies for RunMdsnippets CMake target

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -4,6 +4,24 @@ if (NOT mdsnippets_FOUND)
     return()
 endif ()
 
+file(GLOB_RECURSE
+        APPROVAL_TESTS_ALL_APPROVED_FILES
+        ${PROJECT_SOURCE_DIR}/examples/*.approved.*
+        ${PROJECT_SOURCE_DIR}/tests/*.approved.*
+        )
+
+file(GLOB_RECURSE
+        APPROVAL_TESTS_ALL_TEST_SOURCE_FILES
+        ${PROJECT_SOURCE_DIR}/tests/*.cpp
+        ${PROJECT_SOURCE_DIR}/tests/*.h
+        )
+
+file(GLOB_RECURSE
+        APPROVAL_TESTS_ALL_EXAMPLE_SOURCE_FILES
+        ${PROJECT_SOURCE_DIR}/examples/*.cpp
+        ${PROJECT_SOURCE_DIR}/examples/*.h
+        )
+
 # If any .source.md files have been changed, rerun mdsnippets
 # TODO Also add dependency on files containing any snippets
 list(GET APPROVAL_TESTS_GEN_DOC_MD_FILES 0 FIRST_GENERATED_MD_FILE)
@@ -12,6 +30,10 @@ add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         DEPENDS
         ${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}
+        ${APPROVAL_TESTS_PUBLIC_HEADERS}
+        ${APPROVAL_TESTS_ALL_APPROVED_FILES}
+        ${APPROVAL_TESTS_ALL_TEST_SOURCE_FILES}
+        ${APPROVAL_TESTS_ALL_EXAMPLE_SOURCE_FILES}
         ${PROJECT_SOURCE_DIR}/mdsnippets.json
         BYPRODUCTS ${APPROVAL_TESTS_GEN_DOC_MD_FILES}
         )
