e Make the doc builds detect addition & removal of files
(This isn't perfect - if the new file is created by
copying an existing one, at least in CLion, it gets the
timestamp of the original file, which may not always
trigger a re-run of the target's commands - but it's a lot
better than having to keep remembering to re-run CMake)

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -11,12 +11,12 @@ endif ()
 
 # Find all the public headers
 set(APPROVAL_TESTS_PUBLIC_HEADER_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
-file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS ${APPROVAL_TESTS_PUBLIC_HEADER_DIR}/*.h)
+file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS CONFIGURE_DEPENDS ${APPROVAL_TESTS_PUBLIC_HEADER_DIR}/*.h)
 
 # Find all the .md files in doc/ directory
 # APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES will contain all mdsource/*.source.md files
 set(APPROVAL_TESTS_DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
-file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES ${APPROVAL_TESTS_DOC_DIR}/*.source.md)
+file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES CONFIGURE_DEPENDS ${APPROVAL_TESTS_DOC_DIR}/*.source.md)
 
 # APPROVAL_TESTS_GEN_DOC_MD_FILES        will contain corresponding *.md
 string(REPLACE "mdsource/" "" APPROVAL_TESTS_GEN_DOC_MD_FILES "${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}")
