e Inline a CMake variable

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -10,8 +10,7 @@ if (NOT Sphinx_FOUND)
 endif ()
 
 # Find all the public headers
-set(APPROVAL_TESTS_PUBLIC_HEADER_DIR ${PROJECT_SOURCE_DIR}/ApprovalTests)
-file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS CONFIGURE_DEPENDS ${APPROVAL_TESTS_PUBLIC_HEADER_DIR}/*.h)
+file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/ApprovalTests/*.h)
 
 # Find all the .md files in doc/ directory
 # APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES will contain all mdsource/*.source.md files
