--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -14,8 +14,7 @@ file(GLOB_RECURSE APPROVAL_TESTS_PUBLIC_HEADERS CONFIGURE_DEPENDS ${PROJECT_SOUR
 
 # Find all the .md files in doc/ directory
 # APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES will contain all mdsource/*.source.md files
-set(APPROVAL_TESTS_DOC_DIR ${PROJECT_SOURCE_DIR}/doc)
-file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES CONFIGURE_DEPENDS ${APPROVAL_TESTS_DOC_DIR}/*.source.md)
+file(GLOB_RECURSE APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/doc/*.source.md)
 
 # APPROVAL_TESTS_GEN_DOC_MD_FILES        will contain corresponding *.md
 string(REPLACE "mdsource/" "" APPROVAL_TESTS_GEN_DOC_MD_FILES "${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}")
