e Add missing dependencies to RunMdsnippets CMake target

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -20,14 +20,20 @@ file(GLOB_RECURSE
         ${PROJECT_SOURCE_DIR}/examples/*.h
         )
 
-# If any .source.md files have been changed, rerun mdsnippets
-# TODO Also add dependency on files containing any snippets
+file(GLOB
+        APPROVAL_TESTS_ALL_ROOT_SOURCE_MD_FILES
+        CONFIGURE_DEPENDS
+        ${PROJECT_SOURCE_DIR}/mdsource/*.source.md)
+
+# If any .source.md files have been changed, or their inputs,
+# rerun mdsnippets
 list(GET APPROVAL_TESTS_GEN_DOC_MD_FILES 0 FIRST_GENERATED_MD_FILE)
 add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         COMMAND mdsnippets
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         DEPENDS
         ${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}
+        ${APPROVAL_TESTS_ALL_ROOT_SOURCE_MD_FILES}
         ${APPROVAL_TESTS_PUBLIC_HEADERS}
         ${APPROVAL_TESTS_ALL_TEST_FILES}
         ${APPROVAL_TESTS_ALL_EXAMPLE_FILES}
