e Rerun mdsnippets if any .include.md files change

--- a/doc/run_mdsnippets/CMakeLists.txt
+++ b/doc/run_mdsnippets/CMakeLists.txt
@@ -25,6 +25,11 @@ file(GLOB
         CONFIGURE_DEPENDS
         ${PROJECT_SOURCE_DIR}/mdsource/*.source.md)
 
+file(GLOB_RECURSE
+        APPROVAL_TESTS_ALL_DOC_INCLUDE_MD_FILES
+        CONFIGURE_DEPENDS
+        ${PROJECT_SOURCE_DIR}/doc/*.include.md)
+
 # If any .source.md files have been changed, or their inputs,
 # rerun mdsnippets
 list(GET APPROVAL_TESTS_GEN_DOC_MD_FILES 0 FIRST_GENERATED_MD_FILE)
@@ -33,6 +38,7 @@ add_custom_command(OUTPUT ${FIRST_GENERATED_MD_FILE}
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         DEPENDS
         ${APPROVAL_TESTS_ALL_DOC_SOURCE_MD_FILES}
+        ${APPROVAL_TESTS_ALL_DOC_INCLUDE_MD_FILES}
         ${APPROVAL_TESTS_ALL_ROOT_SOURCE_MD_FILES}
         ${APPROVAL_TESTS_PUBLIC_HEADERS}
         ${APPROVAL_TESTS_ALL_TEST_FILES}
