--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(${PROJECT_NAME}
         docs/ToStringTemplateExample.cpp
         docs/ToStringWrapperExample.cpp
         docs/Tutorial.cpp
+        integrations/FmtTests.cpp
         namers/DocTestNamerTests.cpp
         namers/NamerTests.cpp
         reporters/BlockingReporterTests.cpp
@@ -40,7 +41,7 @@ add_executable(${PROJECT_NAME}
         utilities/SystemUtilsTests.cpp
         writers/StringWriterTests.cpp
         )
-target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
+target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest fmt::fmt)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 # begin-snippet: show_deprecation_warnings_cmake
 # Replace ${PROJECT_NAME} with the name of your test executable:
