--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -41,7 +41,13 @@ add_executable(${PROJECT_NAME}
         utilities/SystemUtilsTests.cpp
         writers/StringWriterTests.cpp
         )
-target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest fmt::fmt)
+target_link_libraries(${PROJECT_NAME}
+        ApprovalTests::ApprovalTests
+        doctest::doctest
+        # begin-snippet: fmt_cmake
+        fmt::fmt
+        # end-snippet
+        )
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 # begin-snippet: show_deprecation_warnings_cmake
 # Replace ${PROJECT_NAME} with the name of your test executable:
