--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -43,11 +43,10 @@ add_executable(${PROJECT_NAME}
         )
 target_link_libraries(${PROJECT_NAME}
         ApprovalTests::ApprovalTests
-        doctest::doctest
-        # begin-snippet: fmt_cmake
-        fmt::fmt
-        # end-snippet
-        )
+        doctest::doctest)
+# begin-snippet: fmt_cmake
+target_link_libraries(${PROJECT_NAME} fmt::fmt)
+# end-snippet
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 # begin-snippet: show_deprecation_warnings_cmake
 # Replace ${PROJECT_NAME} with the name of your test executable:
