t Enable building and testing of FmtAsDefaultTests.cpp
It works on non-Unity builds

--- a/examples/fmt_approvals_demo/CMakeLists.txt
+++ b/examples/fmt_approvals_demo/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(${PROJECT_NAME}
         main.cpp
         FmtTests.cpp
-        # TODO Add FmtAsDefaultTests.cpp
+        FmtAsDefaultTests.cpp
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 # begin-snippet: fmt_cmake
