--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -62,4 +62,4 @@ if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
             DEPENDENCIES ${PROJECT_NAME})
 endif ()
 
-# include(WarningsAsErrors)
+include(WarningsAsErrors)
