--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,24 +20,7 @@ if (APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
 endif ()
 
 if (NOT_SUBPROJECT)
-    if (NOT TARGET gtest_main)
-        # Download and unpack googletest at configure time
-        configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-        execute_process(COMMAND "${CMAKE_COMMAND}" -G "${CMAKE_GENERATOR}" .
-                WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/googletest-download")
-        execute_process(COMMAND "${CMAKE_COMMAND}" --build .
-                WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/googletest-download")
-
-        # Prevent GoogleTest from overriding our compiler/linker options
-        # when building with Visual Studio
-        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-        # Add googletest directly to our build. This adds
-        # the following targets: gtest, gtest_main, gmock
-        # and gmock_main
-        add_subdirectory("${CMAKE_BINARY_DIR}/googletest-src"
-                "${CMAKE_BINARY_DIR}/googletest-build")
-    endif ()
+    add_subdirectory(CMake/googletest)
 endif ()
 
 # This will optionally add the other third-party sub-directories
