--- a/.travis.yml
+++ b/.travis.yml
@@ -177,22 +177,22 @@ matrix:
     - os: osx
       osx_image: xcode11.3
 
-before_script:
-  - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
-  - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CXX="clang++" CC="clang"; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis_retry wget --quiet -O - ${BOOST_URL} | tar -xj || exit 1 ; export BOOST_ROOT=`pwd`/${BOOST_DIR} ; echo $BOOST_ROOT ; fi
-  - which $CXX
-  - which $CC
-  - $CXX --version
-  - cmake --version
+before_script: |
+  if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
+  if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
+  if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CXX="clang++" CC="clang"; fi
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then travis_retry wget --quiet -O - ${BOOST_URL} | tar -xj || exit 1 ; export BOOST_ROOT=`pwd`/${BOOST_DIR} ; echo $BOOST_ROOT ; fi
+  which $CXX
+  which $CC
+  $CXX --version
+  cmake --version
 
-script:
-  - mkdir .build
-  - cd .build
-  - cmake ..
-  - cmake --build .
-  - ctest --verbose
+script: |
+  mkdir .build
+  cd .build
+  cmake ..
+  cmake --build .
+  ctest --verbose
 
 notifications:
   email: true
