e Only run Travis CI builds on travis_ccache branch

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - '*'
-#      - '!compile_time_ninja_check_74'
+      - '!travis_ccache'
   pull_request:
     branches:
       - '*'
-#      - '!compile_time_ninja_check_74'
+      - '!travis_ccache'
 
 jobs:
   clang-format:
