e Add missing call to CMake function to enable caching
And add some debug output to track down any problems with this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(ApprovalTests.cpp)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/")
 include(ApprovalTestsOptions)
 include(UseCompilerCache)
+useCompilerCache()
 
 add_subdirectory(ApprovalTests)
 
