--- a/.travis.yml
+++ b/.travis.yml
@@ -189,7 +189,7 @@ before_script: |
   fi
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     export CXX="clang++" CC="clang"
-    brew install ccache
+    HOMEBREW_NO_AUTO_UPDATE=1 brew install ccache
     export PATH="/usr/local/opt/ccache/libexec:$PATH"
   fi
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
