--- a/.travis.yml
+++ b/.travis.yml
@@ -186,7 +186,7 @@ before_script: |
   fi
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
     export CXX="clang++" CC="clang"
-    HOMEBREW_NO_AUTO_UPDATE=1 brew install ccache
+    HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALL_CLEANUP=1 brew install ccache
     export PATH="/usr/local/opt/ccache/libexec:$PATH"
   fi
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
