F Starting regex scrubbing
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(${PROJECT_NAME}
         reporters/ReporterTests.cpp
         reporters/TestReporter.h
         scrubbers/GuidScrubberTests.cpp
+        scrubbers/ScrubberTests.cpp
         utilities/CartesianProductTests.cpp
         utilities/ExceptionCollectorTests.cpp
         utilities/FileUtilsSystemSpecificTests.cpp
